Node.getTaskId && update tests